--- a/.github/actions/whitesource-unified-agent/Dockerfile
+++ b/.github/actions/whitesource-unified-agent/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /
 COPY wss-unified-agent.jar /
 COPY wss-unified-agent.config /
 COPY entrypoint.sh /
-chmod +x entrypoint.sh
+RUN chmod +x entrypoint.sh
 
 ENTRYPOINT [ "/entrypoint.sh" ]
 CMD [ "-help" ]
