--- a/.github/actions/whitesource-unified-agent/Dockerfile
+++ b/.github/actions/whitesource-unified-agent/Dockerfile
@@ -3,6 +3,7 @@ FROM docker:stable
 WORKDIR /
 
 COPY entrypoint.sh /
+RUN dos2unix /entrypoint.sh && apt-get --purge remove -y dos2unix && rm -rf /var/lib/apt/lists/*
 RUN chmod +x entrypoint.sh
 
 ENTRYPOINT [ "/entrypoint.sh" ]
