--- a/.github/actions/whitesource-unified-agent/Dockerfile
+++ b/.github/actions/whitesource-unified-agent/Dockerfile
@@ -2,7 +2,9 @@ FROM docker:stable
 
 RUN apk --update add bash && \
     apk add dos2unix
-    
+
+RUN apk --update add openjdk7-jre
+
 WORKDIR /
 
 COPY wss-unified-agent.jar /
