--- a/.github/workflows/jsFlowHello.yml
+++ b/.github/workflows/jsFlowHello.yml
@@ -12,7 +12,7 @@ jobs:
       uses: actions/checkout@v1.0.0
     - name: Hello world action step
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        myTok: ${{ secrets.GITHUB_TOKEN }}
       uses: ./.github/actions/js-hello-world
       with:
         who-to-greet: 'Yos'
