--- a/.github/workflows/jsFlowHello.yml
+++ b/.github/workflows/jsFlowHello.yml
@@ -17,3 +17,7 @@ jobs:
       uses: ./.github/actions/js-hello-world
       with:
         who-to-greet: 'Yos'
+    - name: Hello world
+       run: echo Hello world ${FIRST_NAME}
+       env:
+         FIRST_NAME: Mona Lisa
