--- a/.github/workflows/jsFlowHello.yml
+++ b/.github/workflows/jsFlowHello.yml
@@ -13,11 +13,7 @@ jobs:
     - name: Hello world action step
       env:
         FIRST_NAME: Mona Lisa
-        myToken: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       uses: ./.github/actions/js-hello-world
       with:
         who-to-greet: 'Yos'
-    - name: Hello world
-      run: echo Hello world ${FIRST_NAME}
-      env:
-        FIRST_NAME: Mona Lisa
