--- a/.github/actions/js-hello-world/package.json
+++ b/.github/actions/js-hello-world/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@actions/core": "^1.1.1",
     "@actions/github": "^1.1.0",
-    "@actions/exec": "^1.0.1"
+    "@actions/exec": "^1.0.1",
+    "node-cmd": "^3.0.0"
   }
 }
