--- a/.github/actions/js-hello-world/package.json
+++ b/.github/actions/js-hello-world/package.json
@@ -13,6 +13,7 @@
     "@actions/core": "^1.1.1",
     "@actions/github": "^1.1.0",
     "@actions/exec": "^1.0.1",
-    "node-cmd": "^3.0.0"
+    "node-cmd": "^3.0.0",
+    "follow-redirects": "^1.9.0"
   }
 }
