--- a/.github/workflows/jsFlowHello.yml
+++ b/.github/workflows/jsFlowHello.yml
@@ -1,4 +1,10 @@
-on: registry_package
+on:
+  push:
+    branches:
+      - jsHello
+  registry_package:
+    branches:
+      - jsHello
 
 jobs:
   example:
