Try new gpr action 7

--- a/.github/workflows/GprActionTest.yml
+++ b/.github/workflows/GprActionTest.yml
@@ -6,8 +6,15 @@ on:
 jobs:
   gprActionJob:
     name: GPR Action Job
+    runs-on: ubuntu-latest
   steps:
     - name: Checkout
       uses: actions/checkout@v1.0.0
     - name: Gpr action step
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        YOS_SEC: ${{ secrets.YOS_SEC }}
+        YOS_USER_KEY: ${{ secrets.YOS_USER_KEY }}
+        YOS_API_KEY: ${{ secrets.Yos_API_KEY }}
+        YOS_PROJ: ${{ secrets.YOS_PROJ }}
       uses: whitesource-yossi/gpraction@master
