Try new gpr action 10

--- a/.github/workflows/GprActionTest.yml
+++ b/.github/workflows/GprActionTest.yml
@@ -8,6 +8,11 @@ jobs:
     name: GPR Action Job
     runs-on: ubuntu-latest
     steps:
-        - uses: actions/setup-node@v1
-          with:
-            node-version: 10.x
+      - name: Gpr action step
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          YOS_SEC: ${{ secrets.YOS_SEC }}
+          YOS_USER_KEY: ${{ secrets.YOS_USER_KEY }}
+          YOS_API_KEY: ${{ secrets.Yos_API_KEY }}
+          YOS_PROJ: ${{ secrets.YOS_PROJ }}
+        uses: whitesource-yossi/gpraction@master
