--- a/.github/workflows/GprActionTest.yml
+++ b/.github/workflows/GprActionTest.yml
@@ -9,11 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Gpr action step
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          YOS_SEC: ${{ secrets.YOS_SEC }}
-          YOS_USER_KEY: ${{ secrets.YOS_USER_KEY }}
-          YOS_API_KEY: ${{ secrets.Yos_API_KEY }}
-          YOS_PROJ: ${{ secrets.YOS_PROJ }}
-          WS-DESTINATION-URL: 'https://saas.whitesourcesoftware.com/api'
+        with:
+          gpr-token: ${{ secrets.YOS_SEC }}
+          ws-api-key: ${{ secrets.Yos_API_KEY }}
+          ws-user-key: ${{ secrets.YOS_USER_KEY }}
+          ws-project-key: ${{ secrets.YOS_PROJ }}
+          ws-destination-url: https://saas.whitesourcesoftware.com/api
         uses: whitesource-yossi/gpraction@master
