--- a/.github/workflows/GprActionTest.yml
+++ b/.github/workflows/GprActionTest.yml
@@ -15,4 +15,4 @@ jobs:
           ws-user-key: ${{ secrets.YOS_USER_KEY }}
           ws-project-key: ${{ secrets.YOS_PROJ }}
           ws-destination-url: https://saas.whitesourcesoftware.com/api
-        uses: whitesource-yossi/GprAction@master
+        uses: whitesource-yossi/GprAction@4c14d3493ffe1aeb2364eeca3c526a67cd4ac177
