--- a/.github/workflows/GprActionTest.yml
+++ b/.github/workflows/GprActionTest.yml
@@ -14,5 +14,5 @@ jobs:
           ws-api-key: ${{ secrets.Yos_API_KEY }}
           ws-user-key: ${{ secrets.YOS_USER_KEY }}
           ws-project-key: ${{ secrets.YOS_PROJ }}
-          ws-destination-url: https://saas.whitesourcesoftware.com/api
+          ws-destination-url: https://saas.whitesourcesoftware.com/agent
         uses: whitesource-yossi/GprAction@4c14d3493ffe1aeb2364eeca3c526a67cd4ac177
