--- a/.github/workflows/GprActionTest.yml
+++ b/.github/workflows/GprActionTest.yml
@@ -15,4 +15,5 @@ jobs:
           ws-user-key: ${{ secrets.YOS_USER_KEY }}
           ws-project-key: ${{ secrets.YOS_PROJ }}
           ws-destination-url: https://saas.whitesourcesoftware.com/agent
-        uses: whitesource-yossi/GprAction@59f738056821af85aeac2d66cd61c3f38d32f94d
+          print-scan-report: false
+        uses: whitesource-yossi/GprAction@f4f9ab8948190bc8ba88f4d91e2d5a44466187b8
