--- a/.github/workflows/GprActionTest.yml
+++ b/.github/workflows/GprActionTest.yml
@@ -15,5 +15,5 @@ jobs:
           ws-user-key: ${{ secrets.YOS_USER_KEY }}
           ws-project-key: ${{ secrets.YOS_PROJ }}
           ws-destination-url: https://saas.whitesourcesoftware.com/agent
-          print-scan-report: false
+          print-scan-report: true
         uses: whitesource-yossi/GprAction@ad4b7a8dbb1ab009c3dabdeab7206b4f4426ea78
