--- a/.github/workflows/grpSecurityWorkflowDemo.yml
+++ b/.github/workflows/grpSecurityWorkflowDemo.yml
@@ -7,9 +7,9 @@ jobs:
     steps:
       - name: GPR Security Check Step
         id: gpr-security-check
-        uses: whitesource/GprSecurityAction@19.10.2
+        uses: whitesource/GprSecurityAction@yoni-dev
         with:
-          gpr-token: ${{ secrets.GPR_ACCESS_TOKEN }}
+          gpr-token: ${{ secrets.YOS_SEC }}
           ws-api-key: ${{ secrets.WS_API_KEY }}
           ws-user-key: ${{ secrets.WS_USER_KEY }}
           ws-product-key: ${{ secrets.WS_PRODUCT_KEY }}
