--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - name: GPR Security Check Step
         id: gpr-security-check
-        uses: whitesource-yossi/GprAction@yoni-dev
+        uses: whitesource/GprSecurityAction@19.10.1
         with:
           gpr-token: ${{ secrets.YOS_SEC }}
           ws-api-key: ${{ secrets.WS_API_KEY }}
