--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - name: GP Security Check Step
         id: gp-security-check
-        uses: whitesource/GpSecurityAction@b5f36d0e95550dd5699e967862e882fcee19fa2c
+        uses: whitesource/GitHubPackagesSecurityAction@19.10.2
         with:
           gp-token: ${{ secrets.GP_TOKEN }}
           ws-api-key: ${{ secrets.WS_API_KEY }}
